# pyaimairaodata

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.md  installation.md
src/pyaimairaodata/: OData.py  __init__.py  aimairaOData.py  entity.py  entitySet.py  universe.py
